--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <!-- Dynamic Header / Hero -->
     <header id="main-header">
         <div class="header-content">
             <div class="profile-container">
@@ -21,39 +20,40 @@
                     <img src="https://api.dicebear.com/7.x/shapes/svg?seed=Felix" alt="Profile Avatar">
                 </div>
                 <div class="profile-info">
-                    <h1 class="name">ALEXANDER DEV</h1>
+                    <h1 class="name">YUNISH SAPKOTA</h1>
                     <div class="contact-links">
-                        <a href="https://github.com" target="_blank" class="link">github.com/alexander</a>
-                        <a href="mailto:hello@alexander.dev" class="link">hello@alexander.dev</a>
+                        <a href="https://github.com/yunishsapkota" target="_blank"
+                            class="link">github.com/yunishsapkota</a>
+                        <a href="mailto:yunish.sapkota@proton.me" class="link">yunish.sapkota@proton.me</a>
                     </div>
                 </div>
             </div>
 
             <div class="hero-text">
-                <p><strong>ABOUT:</strong> Creative Developer & UI/UX Designer crafting modern digital experiences. This
-                    site demonstrates a dynamic shrinking header effect.</p>
+                <p><strong>ABOUT:</strong> I'm a passionate software engineer with a knack for building robust solutions
+                    in Python and Golang, often tackling projects on my own to bring ideas to life. As a
+                    creative thinker, I thrive on turning complex challenges into elegant code, and I'm a quick learner
+                    who dives deep into new tech with enthusiasm. My focus lies in backend development and tooling,
+                    where I craft efficient systems that scale seamlessly. In my free time, I enjoy researching on
+                    self-hosting setups, scripting automations, and honing my skills in Linux—yep, I use Arch, by the
+                    way—and systemdesign, always pushing the boundaries of my knowledge.</p>
             </div>
 
-            <!-- Scroll Down Button -->
             <button class="scroll-down-btn" id="scrollBtn">
                 Scroll for more info
                 <span class="arrow">↓</span>
             </button>
 
-            <!-- Theme Toggle -->
             <button class="theme-toggle" id="themeToggle" aria-label="Toggle Theme">
                 <span class="icon">🌙</span>
             </button>
         </div>
     </header>
 
-    <!-- Spacer to prevent content jump when header becomes fixed/shrinks if needed, 
-         though we might handle this with padding on body -->
     <div class="header-spacer"></div>
 
     <main class="container" id="main-content">
 
-        <!-- Info Grid Section -->
         <section class="info-grid">
             <!-- Education -->
             <article class="card">
@@ -63,9 +63,9 @@
                 </div>
                 <div class="card-body">
                     <div class="item">
-                        <h3>B.S. Computer Science</h3>
-                        <p class="meta">University of Technology, 2020-2024</p>
-                        <p>Specialized in Human-Computer Interaction and Web Technologies.</p>
+                        <h3>B.S. Computer Science and Engineering</h3>
+                        <p class="meta">Cambridge Institute of Technology, 2019-2024</p>
+                        <p>Specialized in Machine Learning</p>
                     </div>
                 </div>
             </article>
@@ -78,15 +78,15 @@
                 </div>
                 <div class="card-body">
                     <div class="item">
-                        <h3>E-Commerce Dashboard</h3>
-                        <p>React, Node.js, PostgreSQL</p>
+                        <h3>KSync</h3>
+                        <p>Python, Pthon-QT</p>
                     </div>
                     <div class="item">
                         <h3>AI Chat Interface</h3>
                         <p>Python, WebSocket, OpenAI API</p>
                     </div>
                     <div class="item">
-                        <h3>Portfolio v1</h3>
+                        <h3>Site</h3>
                         <p>HTML5, SCSS, Vanilla JS</p>
                     </div>
                 </div>
