--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Portfolio</title>
+    <title>Yunish Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -101,7 +101,7 @@
                 <div class="card-body">
                     <div class="skill-row">
                         <div class="skill-info">
-                            <span>English</span>
+                            <span>Nepali</span>
                             <span>Native</span>
                         </div>
                         <div class="prof-bar-bg">
@@ -110,41 +110,50 @@
                     </div>
                     <div class="skill-row">
                         <div class="skill-info">
-                            <span>Spanish</span>
+                            <span>English</span>
                             <span>Fluent</span>
                         </div>
                         <div class="prof-bar-bg">
-                            <div class="prof-bar-fill" style="width: 90%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-row">
-                        <div class="skill-info">
-                            <span>JavaScript / TS</span>
-                            <span>Advanced</span>
-                        </div>
-                        <div class="prof-bar-bg">
-                            <div class="prof-bar-fill" style="width: 95%"></div>
+                            <div class="prof-bar-fill" style="width: 80%"></div>
                         </div>
                     </div>
                     <div class="skill-row">
                         <div class="skill-info">
                             <span>Python</span>
-                            <span>Intermediate</span>
+                            <span>Advanced</span>
                         </div>
                         <div class="prof-bar-bg">
-                            <div class="prof-bar-fill" style="width: 75%"></div>
+                            <div class="prof-bar-fill" style="width: 70%"></div>
                         </div>
                     </div>
                     <div class="skill-row">
                         <div class="skill-info">
-                            <span>Rust</span>
+                            <span>Go Lang</span>
+                            <span>Intermediate</span>
+                        </div>
+                        <div class="prof-bar-bg">
+                            <div class="prof-bar-fill" style="width: 60%"></div>
+                        </div>
+                    </div>
+                    <div class="skill-row">
+                        <div class="skill-info">
+                            <span>Java Script</span>
                             <span>Beginner</span>
                         </div>
                         <div class="prof-bar-bg">
-                            <div class="prof-bar-fill" style="width: 40%"></div>
+                            <div class="prof-bar-fill" style="width: 30%"></div>
                         </div>
                     </div>
-                </div>
+                    <div class="skill-row">
+                        <div class="skill-info">
+                            <span>Bash/Script</span>
+                            <span>Advanced</span>
+                        </div>
+                        <div class="prof-bar-bg">
+                            <div class="prof-bar-fill" style="width: 70%"></div>
+                        </div>
+
+                    </div>
             </article>
 
             <!-- Other Skills -->
@@ -155,14 +164,13 @@
                 </div>
                 <div class="card-body">
                     <div class="tags">
-                        <span>React</span>
-                        <span>Node.js</span>
-                        <span>UI Design</span>
-                        <span>Figma</span>
-                        <span>Git</span>
                         <span>Docker</span>
+                        <span>Podman</span>
+                        <span>UI</span>
+                        <span>Networking</span>
+                        <span>Git</span>
+                        <span>GNU/Linux</span>
                         <span>AWS</span>
-                        <span>Animation</span>
                     </div>
                 </div>
             </article>
@@ -175,17 +183,16 @@
                 <h2>Currently working on:</h2>
             </div>
             <div class="card-body">
-                <h3>Senior Frontend Engineer @ TechCorp</h3>
-                <p>Leading the migration of legacy monolith to micro-frontends. Building a completely new design system
-                    for enterprise products.</p>
+                <h3>Matrix Sms client</h3>
+                <p>This app addresses problem where you dont want to missout any sms but you are outside country or your
+                    providers network range. This app automatically forwards the sms over secure matrix network.</p>
                 <div class="progress-bar">
-                    <div class="progress" style="width: 75%"></div>
+                    <div class="progress" style="width: 25%"></div>
                 </div>
-                <p class="status-text">Project Status: 75% Complete</p>
+                <p class="status-text">Project Status: 25% Complete. Some research needed.</p>
             </div>
         </section>
 
-        <!-- Footer -->
         <footer>
             <div class="social-links">
                 <a href="#">GitHub</a>
@@ -193,7 +200,6 @@
                 <a href="#">LinkedIn</a>
                 <a href="#">Email</a>
             </div>
-            <p>&copy; 2026 Alexander Dev. All Rights Reserved.</p>
         </footer>
 
     </main>
